# aether-launcher

./: CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: java.rs  lib.rs  minecraft.rs  play.rs  sync.rs
src-tauri/tests/: e2e_live.rs  java_live.rs  signature_compat.rs
src-tauri/tests/fixtures/: signed_payload.json
